Wick made a fucky and didn't even use this mod, here's a queue improvement regardless